syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

message TradeMessage {
    string taker_id = 1;
    string maker_id = 2;
    string taker_oid = 3;
    string maker_oid = 4;
    uint64 amount = 5;
    uint64 price = 6;
    string base = 7;
    string quote = 8;
    google.protobuf.Timestamp executed_at = 9;
}
